force-app/main/default/objects/Incident_Location__c/Incident_Location__c.object-meta.xml
<CustomObject>
    <label>Incident Location</label>
    <nameField>
        <displayFormat>IL-{00000000}</displayFormat>
        <label>Incident Location Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>