force-app/main/default/objects/Incident_Location__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Incident Locations</relationshipLabel>
    <relationshipName>Incident_Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>