force-app/main/default/objects/Incident_Location__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Location Incidents</relationshipLabel>
    <relationshipName>Incident_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>